# prelegal

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  temp.ipynb
backend/: pyproject.toml
backend/app/: auth.py  chat.py  database.py  documents.py  health.py  main.py  models.py  template_loader.py  templates.py
backend/data/templates/: employment_agreement.json  independent_contractor.json  index.json  loan_agreement.json  nda.json  partnership_agreement.json  power_of_attorney.json  privacy_policy.json  residential_lease.json  service_agreement.json  terms_of_service.json
backend/tests/: conftest.py  test_auth.py  test_documents.py  test_health.py  test_templates.py
frontend/: TESTING.md  jest.config.js  package-lock.json  package.json
frontend/src/__tests__/: AuthScreen.test.tsx  ChatPanel.test.tsx  DocumentForm.test.tsx  DocumentPage.test.tsx  DocumentPreview.test.tsx  NdaForm.test.tsx  NdaPage.test.tsx  NdaPreview.test.tsx  TemplateSelector.test.tsx  setup.ts  template.test.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: AuthScreen.tsx  ChatPanel.tsx  DocumentForm.tsx  DocumentPage.tsx  DocumentPreview.tsx  NdaForm.tsx  NdaPage.tsx  NdaPreview.tsx  TemplateSelector.tsx
frontend/src/data/: nda.json
frontend/src/lib/: api.ts  template.ts
scripts/: start-linux.sh  start-windows.ps1  stop-linux.sh  stop-windows.ps1
