[project]
name = "prelegal-backend"
version = "0.1.0"
description = "Prelegal API backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.21.0",
    "python-jose[cryptography]>=3.4.0",
    "bcrypt>=4.0.0",
    "pydantic[email]>=2.0.0",
    "greenlet>=3.0.0",
    "litellm>=1.50.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=1.0.0",
    "httpx>=0.28.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
